--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p This Dashboard provides information about living in Kiel to International students.
