--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,49 @@
+@import url 'https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700';
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Source Code Pro', monospace;
+}
+header{
+  background: url(''https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925'');
+  background-position: center;
+}
+page-title{
+  font-weight: 200;
+  font-size: 80px;
+  text-align: center;
+  padding: 100px;
+  text-transform: uppercase;
+  color: #fff;
+}
+nav{
+  background: #000;
+  text-align: center;
+}
+nav li{
+  display: inline-block;
 }
 
-a {
-  color: #00B7FF;
+nav li a {
+  display: inline-block;
+  padding: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+li a:hover{
+  background-color: #3AB795;
+  text-decoration: underline;
+}
+
+main-content{
+  margin: 50px auto;
+  max-width: 600px;
+}
+
+footer{
+  margin: 50px auto;
+  max-width: 600px;
+  border-top: 1px solid #444;
+  padding: 20px 0;
 }
