--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,14 @@
-extends layout
+extend layout
 
 block content
-  h1= title
-  p Welcome to Kiel #{title}
-  p This is a Dashboard Website a line
-  p one more line
+  p.
+    Lorem ipsum dolor sit amet, pri tacimates salutatus forensibus ea. Sit ceteros hendrerit
+    consequuntur an, dicta tibique eu vis. Habeo impetus comprehensam te nam, in sit feugait
+    principes. Cibo possit oblique qui cu, aperiri vivendum sed ne. Minim repudiare ne cum,
+    ex graeco quodsi ius.
+
+  p.
+    Epicurei constituam sed at, id placerat similique tincidunt eam. Te quas inermis nominavi
+    vel, in sea erant debitis reformidans, an cum eripuit democritum. Usu modus primis et, his
+    errem scripserit cu. Mea cu aperiri repudiandae, id sit offendit noluisse torquatos. Sit
+    te suas fastidii, cum nonumy iriure maluisset at, vix te graeco moderatius argumentum.
